[gd_scene load_steps=9 format=2]

[ext_resource path="res://characters/hero.gd" type="Script" id=1]
[ext_resource path="res://hud/spritesheet.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "mouvement bas"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("hero_spr:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 16, 17 ]
}

[sub_resource type="Animation" id=2]
resource_name = "mouvement droite"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("hero_spr:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 20, 21 ]
}

[sub_resource type="Animation" id=3]
resource_name = "mouvement gauche"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("hero_spr:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 22, 23 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("hero_spr:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 19, 18 ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("hero_spr:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 24, 25 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 28.0717, 32.6612 )

[node name="hero" type="KinematicBody2D"]
position = Vector2( 246.583, 209.695 )
collision_mask = 52
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="hero_spr" type="Sprite" parent="."]
modulate = Color( 0.878431, 0.878431, 0.878431, 1 )
texture = ExtResource( 2 )
vframes = 8
hframes = 8
frame = 21

[node name="animation hero" type="AnimationPlayer" parent="."]
"anims/mouvement bas" = SubResource( 1 )
"anims/mouvement droite" = SubResource( 2 )
"anims/mouvement gauche" = SubResource( 3 )
"anims/mouvement haut" = SubResource( 4 )
anims/saut = SubResource( 5 )

[node name="RayCast_bas" type="RayCast2D" parent="."]
enabled = true
collision_mask = 36

[node name="RayCast_haut" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -50 )
collision_mask = 36

[node name="RayCast_gauche" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 36

[node name="RayCast_droite" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 36

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )
